--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="ingles, aprender, escuelahighlands, highlands, escuela, first, virtual">
-  <meta name="description" content="Highlands te ofrece cursos de inglés tanto online como presencial, adaptada a tus necesidades. Con cursos diseñados para todas las edades y niveles, te acompañamos en cada paso hacia la fluidez, independientemente de dónde te encuentres. Sumérgete en un aprendizaje que combina tradición y tecnología, todo respaldado por una comunidad comprometida con tu éxito">
+  <meta name="description"
+    content="Highlands te ofrece cursos de inglés tanto online como presencial, adaptada a tus necesidades. Con cursos diseñados para todas las edades y niveles, te acompañamos en cada paso hacia la fluidez, independientemente de dónde te encuentres. Sumérgete en un aprendizaje que combina tradición y tecnología, todo respaldado por una comunidad comprometida con tu éxito">
   <title>Highlands</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/roboto-font@0.1.0/css/fonts.min.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -40,15 +43,15 @@
   </style>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZLDBSV305">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ZLDBSV305">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2ZLDBSV305');
-</script>
+    gtag('config', 'G-2ZLDBSV305');
+  </script>
 </head>
 
 <body>
@@ -67,13 +70,16 @@
           </div>
           <p class="subHighlands">Academia de Inglés</p>
         </div>
-        <p class="tituloHighlandsTexto"><strong>Highlands te ofrece cursos de inglés tanto online como presencial, adaptada a tus necesidades. Con cursos diseñados para todas las edades y niveles, te acompañamos en cada paso hacia la fluidez, independientemente de dónde te encuentres. Sumérgete en un aprendizaje que combina tradición y tecnología, todo respaldado por una comunidad comprometida con tu éxito</strong></p>
+        <p class="tituloHighlandsTexto">Highlands te ofrece cursos de inglés tanto online como presencial,
+            adaptada a tus necesidades. Con cursos diseñados para todas las edades y niveles, te acompañamos en cada
+            paso hacia la fluidez, independientemente de dónde te encuentres. Sumérgete en un aprendizaje que combina
+            tradición y tecnología, todo respaldado por una comunidad comprometida con tu éxito</p>
         <div class="contenedorBotonContactanosPrincipal">
           <a href="https://wa.me/5491169551221" class="botonContactanosPrincipal">Contactanos</a>
         </div>
       </div>
       <div class="contenedorFotoComputadora" id="fotoCompu">
-        <img class="fotoComputadora" src="fotosComponente/imgCompuJPG.jpg" alt="">
+        <img class="fotoComputadora" src="fotosComponente/imgCompu.png" alt="">
       </div>
     </section>
 
@@ -125,8 +131,8 @@
     </section>
 
     <section class="diapositivaLogros">
-      <div class="contenedorImgEstudiantes">
-        <img src="fotosComponente/imgAprendeIngles.png" class="imgEstudiantes" alt="">
+      <div class="tituloLogros">
+        <p>LOGROS</p>
       </div>
       <div class="contenedorLogros">
         <div class="cuadrado">
@@ -144,54 +150,17 @@
       </div>
     </section>
 
-    <section class="seccionTestimonios">
-      <h2 class="tituloTestimonio">Testimonios</h2>
-      <div class="cardsTestimonio">
-        <div class="cardTestimonio">
-          <div class="cardTestimonio-inner">
-            <div class="cardTestimonio-front">
-              <img class="fotoTestimonio" src="fotosComponente/imgCande.jpeg" alt="">
-              <p class="datosPersona">CANDELARIA, 21 AÑOS</p>
-            </div>
-            <div class="cardTestimonio-back">
-              <p>"Recomendaría Highlands a aquellos que buscan mejorar su inglés en un entorno amigable y de apoyo. Fue
-                una experiencia valiosa que ciertamente ha tenido un impacto positivo en mi dominio del idioma."</p>
-            </div>
-          </div>
-        </div>
-        <div class="cardTestimonio">
-          <div class="cardTestimonio-inner">
-            <div class="cardTestimonio-front">
-              <img class="fotoTestimonio" src="fotosComponente/imgRama.jpeg" alt="">
-              <p class="datosPersona">RAMIRO, 20 AÑOS</p>
-            </div>
-            <div class="cardTestimonio-back">
-              <p>
-                "Mi experiencia en Highlands ha sido más que gratificante. Cuando me inscribí,
-                buscaba un lugar donde no solo pudiera aprender inglés, sino también sentirme motivada y desafiada.
-                Superó mis expectativas en todos los aspectos."
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="cardTestimonio">
-          <div class="cardTestimonio-inner">
-            <div class="cardTestimonio-front">
-              <img class="fotoTestimonio" src="fotosComponente/imgPaz.jpeg" alt="">
-              <p class="datosPersona">PAZ, 20 AÑOS</p>
-            </div>
-            <div class="cardTestimonio-back">
-              <p>
-                "Como profesional en un campo donde el inglés es crucial,
-                mi experiencia en Highlands ha sido fundamental
-                para mi desarrollo laboral."
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section>
+    
+    
+  
+  <section class="seccionServiciosEspeciales">
+    <div>
+      <img src="fotosComponente/serviciosEspeciales.png" alt="">
+    </div>
+  </section>
+  
+  
+  
 
 
   </main>
