--- a/cursos/index.html
+++ b/cursos/index.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Explora la diversidad de cursos de ingles en Highlands, desde cursos online preparatorios para exámenes internacionales como FCE y CAE, hasta programas acelerados diseñados para formar personas bilingües. También ofrecemos cursos presenciales para niños y jóvenes, integrando inglés en materias como historia y ciencias, con el objetivo de formar alumnos bilingües desde la infancia. Todos nuestros programas están diseñados para adaptarse a tus metas, ya sea viajar, estudiar o trabajar globalmente" >
+  <meta name="description"
+    content="Explora la diversidad de cursos de ingles en Highlands, desde cursos online preparatorios para exámenes internacionales como FCE y CAE, hasta programas acelerados diseñados para formar personas bilingües. También ofrecemos cursos presenciales para niños y jóvenes, integrando inglés en materias como historia y ciencias, con el objetivo de formar alumnos bilingües desde la infancia. Todos nuestros programas están diseñados para adaptarse a tus metas, ya sea viajar, estudiar o trabajar globalmente">
   <title>Highlands - Cursos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/roboto-font@0.1.0/css/fonts.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,8 +61,90 @@
   <main class="mainCursos">
     <section class="seccionMasInformacion">
       <h1 id="primerCurso" class="tituloNuestrosCursos">Nuestros cursos con certificaciones</h1>
-      <p>Explora la diversidad de cursos de ingles en Highlands, desde cursos online preparatorios para exámenes internacionales como FCE y CAE, hasta programas acelerados diseñados para formar personas bilingües. También ofrecemos cursos presenciales para niños y jóvenes, integrando inglés en materias como historia y ciencias, con el objetivo de formar alumnos bilingües desde la infancia. Todos nuestros programas están diseñados para adaptarse a tus metas, ya sea viajar, estudiar o trabajar globalmente.</p>
+      <p>Explora la diversidad de cursos de ingles en Highlands, desde cursos online preparatorios para exámenes
+        internacionales como FCE y CAE, hasta programas acelerados diseñados para formar personas bilingües. También
+        ofrecemos cursos presenciales para niños y jóvenes, integrando inglés en materias como historia y ciencias, con
+        el objetivo de formar alumnos bilingües desde la infancia. Todos nuestros programas están diseñados para
+        adaptarse a tus metas, ya sea viajar, estudiar o trabajar globalmente.</p>
     </section>
+
+    <section class="seccionCursos">
+      <div class="curso">
+        <div class="contenedorImgCurso">
+          <img src="../fotosComponente/imgCursoKinder.jpeg" alt="" class="imgCurso">
+        </div>
+        <div class="contenedorInfoCurso">
+          <h3>Nivel inicial</h3>
+          <p class="infoCurso">
+            El Nivel Inicial de Highlands, para <strong>niños y niñas de 4 a 5 años</strong>, es
+            <strong>presencial</strong> y propone
+            aprender inglés a través del <strong>juego, la exploración y la creatividad.</strong> En cada clase, los
+            chicos
+            descubren el idioma de <strong> forma natural y divertida</strong> , combinando <strong>arte, ciencia y
+              tecnología</strong> en experiencias
+            llenas de movimiento y curiosidad. Con <strong>dos docentes por sala</strong>, cada niño recibe una
+            <strong>atención personalizada</strong>
+            que respeta sus tiempos y potencia su entusiasmo por aprender.
+          </p>
+        </div>
+      </div>
+      <div class="curso">
+        <div class="contenedorInfoCurso">
+          <h3>Escuela primaria</h3>
+          <p class="infoCurso">
+            La <strong>Primaria en Highlands</strong> es <strong>presencial</strong> y ofrece mucho más que aprender
+            inglés.
+            Nuestro objetivo es que los chicos se <strong>expresen con confianza y naturalidad</strong> en el
+            idioma desde una edad temprana. Con un <strong>enfoque dinámico e interdisciplinario</strong> , integramos
+            <strong>inglés con ciencia, estudios sociales y literatura</strong>, despertando <strong>la curiosidad, el
+              pensamiento
+              crítico y la creatividad</strong>. Además, los preparamos para <strong>exámenes internacionales de
+              Cambridge</strong>, brindándoles
+            herramientas sólidas para su futuro académico y personal. En Highlands, el inglés deja de ser una materia:
+            se
+            convierte en <strong>una forma de pensar, comunicarse y vivir</strong>.
+          </p>
+        </div>
+        <div class="contenedorImgCurso">
+          <img src="../fotosComponente/imgCursoPrimaria.jpeg" alt="" class="imgCurso">
+        </div>
+      </div>
+      <div class="curso">
+        <div class="contenedorImgCurso">
+          <img src="../fotosComponente/imgCursoSecundaria.jpeg" alt="" class="imgCurso">
+        </div>
+        <div class="contenedorInfoCurso">
+          <h3>Escuela secundaria</h3>
+          <p class="infoCurso">
+            La <strong>Secundaria en Highlands</strong> es <strong>presencial</strong> y forma alumnos <strong>bilingües
+              y preparados para el mundo</strong>. Nuestro objetivo es que los estudiantes egresen con un <strong>nivel avanzado de inglés</strong>,
+            capaces de comunicarse con
+            <strong>fluidez y seguridad</strong> en cualquier contexto. Como <strong>sede oficial de Cambridge</strong>,
+            los preparamos para rendir
+            <strong>certificaciones internacionales</strong>, con una tasa de aprobación del <strong>95%</strong>. Esta
+            formación les abre <strong>puertas académicas y profesionales</strong>,
+            tanto en Argentina como en el exterior, y los impulsa a desarrollar <strong>pensamiento crítico, autonomía y
+              confianza</strong>. En Highlands, los alumnos no solo aprenden
+            inglés: <strong>lo viven, lo usan y lo dominan</strong>.
+          </p>
+        </div>
+      </div>
+      <div class="curso">
+        <div class="contenedorInfoCurso">
+          <h3>Cursos cuatrimestrales</h3>
+          <p class="infoCurso">
+            Los <strong>cursos cuatrimestrales de Highlands</strong> están diseñados para <strong>jóvenes y adultos</strong> que buscan aprender inglés de manera <strong>flexible y efectiva</strong>. Ofrecemos tres enfoques: <strong>inglés general</strong>, <strong>para viajes</strong> y <strong>laboral</strong>. Podés cursar de forma <strong>presencial</strong>, <strong>en vivo online</strong> o <strong>asincrónica</strong>, adaptando tu aprendizaje a tus tiempos. Todas las clases quedan <strong>grabadas en nuestra plataforma educativa</strong> e incluyen <strong>material extra</strong> para seguir practicando. Además, participás en <strong>clases orales con docentes nativos</strong>, avanzás <strong>dos niveles por año</strong> y, al finalizar, obtenés una <strong>certificación internacional reconocida</strong> que respalda tu progreso.
+          </p>
+        </div>
+        <div class="contenedorImgCurso">
+          <img src="../fotosComponente/imgCursoOnline.jpeg" alt="" class="imgCurso">
+        </div>
+      </div>
+    </section>
+
+    <!--
+
+
     <section class="contenedorCursos">
       <div id="kindergarten" class="contenedorCurso">
         <div class="contenedorPortadaCurso">
@@ -125,6 +212,11 @@
             </div>
           </div>
     </section>
+
+
+
+    -->
+
   </main>
 
   <footer>
@@ -174,6 +266,7 @@
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
   <script src="../js/navbar.js"></script>
+  <script src="../js/cursos.js"></script>
 </body>
 
 </html>
