--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="contenedorFotoComputadora" id="fotoCompu">
-        <img class="fotoComputadora" src="fotosComponente/imgCompu.png" alt="">
+        <img class="fotoComputadora" src="/fotosComponente/imgCompu.png?v=9999" alt="">
       </div>
     </section>
 
