--- a/contacto/index.html
+++ b/contacto/index.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Highlands te invita a explorar el mundo a través del inglés, ofreciendo educación personalizada y accesible para estudiantes de todas partes. Si deseas mejorar tu inglés o conocer más sobre nuestros programas, estamos listos para asistirte">
+  <meta name="description"
+    content="Highlands te invita a explorar el mundo a través del inglés, ofreciendo educación personalizada y accesible para estudiantes de todas partes. Si deseas mejorar tu inglés o conocer más sobre nuestros programas, estamos listos para asistirte">
   <title>Highlands - Contacto</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/roboto-font@0.1.0/css/fonts.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +64,7 @@
         <img class="imagenCompu" src="../fotosComponente/3.png" alt="">
       </div>
       <div class="contenedorInfoContacto">
-        <h2 class="contenedorInfoContactoTitulo">!Contactanos y <strong>Aprende ingles de manera fluida!</strong></h2>
+        <h2 class="contenedorInfoContactoTitulo">¡Contactanos y <strong>Aprende ingles de manera fluida!</strong></h2>
         <hr class="contenedorInfoContactoSeparador">
         <p class="contenedorInfoContactoInfo">
           En nuestra academia de Inglés, abrimos las puertas a nuevas oportunidades y culturas, a través del poder del
@@ -76,7 +81,8 @@
                 src="../fotosComponente/facebook.webp" class="imgRedes" alt=""></a>
             <a href="https://www.instagram.com/escuelahighlands/" class="contenedorLogoRedes"><img
                 src="../fotosComponente/Insta.webp" class="imgRedes" alt=""></a>
-            <a href="" class="contenedorLogoRedes"><img src="../fotosComponente/twitter.png" class="imgRedes" alt=""></a>
+            <a href="" class="contenedorLogoRedes"><img src="../fotosComponente/twitter.png" class="imgRedes"
+                alt=""></a>
           </div>
         </div>
       </div>
