--- a/examenes/index.html
+++ b/examenes/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En Highlands, nos dedicamos a preparar a los estudiantes para exámenes internacionales de inglés, enfocándonos en una preparación integral y personalizada que cubre todas las habilidades del idioma. Con un programa diseñado para adaptarse a cada estudiante, aseguramos una preparación eficaz para enfrentar estos retos académicos y profesionales con confianza" >
+    <meta name="description"
+        content="En Highlands, nos dedicamos a preparar a los estudiantes para exámenes internacionales de inglés, enfocándonos en una preparación integral y personalizada que cubre todas las habilidades del idioma. Con un programa diseñado para adaptarse a cada estudiante, aseguramos una preparación eficaz para enfrentar estos retos académicos y profesionales con confianza">
     <title>Highlands - Examenes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -11,11 +12,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/examenes.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="shortcut icon" href="../fotosComponente/logitoFavicon.png" type="image/png">
     <style>
         body {
@@ -59,7 +64,10 @@
                 <strong class="tituloExamenesInternacionales">Clasificación de exámenes internacionales</strong>
             </h1>
             <p class="infoAperturaExamenes">
-                En Highlands, nos dedicamos a preparar a los estudiantes para exámenes internacionales de inglés, enfocándonos en una preparación integral y personalizada que cubre todas las habilidades del idioma. Con un programa diseñado para adaptarse a cada estudiante, aseguramos una preparación eficaz para enfrentar estos retos académicos y profesionales con confianza.
+                En Highlands, nos dedicamos a preparar a los estudiantes para exámenes internacionales de inglés,
+                enfocándonos en una preparación integral y personalizada que cubre todas las habilidades del idioma. Con
+                un programa diseñado para adaptarse a cada estudiante, aseguramos una preparación eficaz para enfrentar
+                estos retos académicos y profesionales con confianza.
             </p>
             <!-- <a href="#seccionBotonTest" class="miBoton"><img src="fotosComponente/down-arrow.png" class="imagenFlecha"alt=""></a> -->
         </section>
@@ -72,7 +80,8 @@
             </h3>
             <a target="_blank"
                 href="https://docs.google.com/forms/d/e/1FAIpQLScfAFM8Q7tiNqUAYLwtVb609TSQShnbT6lkdJhpOOHi0zh3-A/viewform?usp=sf_link"
-                class="botonRealizarTestNivelIngles">Realizar test</a>
+                class="botonRealizarTestNivelIngles">Realizar test
+            </a>
         </section>
     </main>
 
