--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta description="Desde 1998, Highlands se ha especializado en preparar estudiantes de todas las edades para exámenes internacionales, logrando que muchos se inserten laboral y académicamente en el exterior. Bajo el liderazgo de Laura Gabriela Lenzi, destacada en inglés y con una visión empresarial inspiradora, Highlands ofrece una educación de calidad en idiomas" >
+  <meta
+    description="Desde 1998, Highlands se ha especializado en preparar estudiantes de todas las edades para exámenes internacionales, logrando que muchos se inserten laboral y académicamente en el exterior. Bajo el liderazgo de Laura Gabriela Lenzi, destacada en inglés y con una visión empresarial inspiradora, Highlands ofrece una educación de calidad en idiomas">
   <title>Highlands - Nosotros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/nosotros.css">
   <link rel="stylesheet" href="../css/index.css">
   <link rel="shortcut icon" href="../fotosComponente/logitoFavicon.png" type="image/png">
@@ -52,7 +57,6 @@
   <main>
     <section class="nosotros">
       <div class="contenedorInfo">
-        <h1 class="tituloNosotros">Nosotros</h1>
         <h3>HIGHLANDS S.R.L</h3>
         <p class="contenedorInfoTexto">
           Desde nuestros comienzos en 1998 nos hemos dedicado a preparar alumnos de todas las edades para rendir
@@ -61,13 +65,13 @@
         </p>
       </div>
       <div class="contenedorImagen">
-        <img class="imagenNosotros" src="../fotosComponente/fotoNosotros.svg" alt="Imagen de nosotros">
+        <img class="imagenNosotros" src="../fotosComponente/fotoEdificio.jpeg" alt="Imagen de nosotros">
       </div>
     </section>
     <section class="nosotros-2">
       <div class="contenedorInfoCierre">
         <div class="contenedorTexto">
-          <h4 class="tituloCeo">Nuestro CEO</h3>
+          <h3 class="tituloCeo">Nuestro CEO</h3>
             <p class="infoCierre">
               Tenemos el privilegio de ser liderados por una profesional excepcional como Laura Gabriela Lenzi.
               Nacida el 30 de julio de 1975, Laura ha demostrado desde temprana edad un profundo interés y habilidad en
